--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
 		]
 	},
 	"dependencies": {
+		"@fontsource/roboto": "^4.5.7",
+		"@material-ui/core": "^4.12.4",
 		"bootstrap": "^5.1.3",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
