--- a/package.json
+++ b/package.json
@@ -79,12 +79,13 @@
 		"@material-ui/core": "^4.12.4",
 		"@mui/icons-material": "^5.8.0",
 		"@mui/material": "^5.8.1",
+		"@mui/x-data-grid": "^5.12.0",
 		"bootstrap": "^5.1.3",
 		"prop-types": "^15.6.1",
-		"react": "^17.0.0",
+		"react": "^17.0.2",
 		"react-bootstrap": "^2.3.0",
 		"react-datepicker": "^4.7.0",
-		"react-dom": "^17.0.0",
+		"react-dom": "^17.0.2",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^5.2.0"
 	}
