--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ flask-admin = "*"
 mysqlclient = "*"
 flask-jwt-extended = "*"
 werkzeug = "*"
+cloudinary-cli = "*"
 
 [requires]
 python_version = "3.8"
