--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"@mui/material": "^5.8.1",
 		"@mui/x-data-grid": "^5.12.0",
 		"bootstrap": "^5.1.3",
+		"google-map-react": "^2.2.0",
 		"prop-types": "^15.6.1",
 		"react": "^17.0.2",
 		"react-bootstrap": "^2.3.0",
