--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   },
   "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "index.jsx",
+  "type": "module",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js --port 3000",
-    "build": "webpack --config webpack.prod.js",
-    "test": "jest"
+    "start": "vite",
+    "build": "vite build",
+    "test": "vitest",
+    "serve": "vite preview --port 3000"
   },
   "author": {
     "name": "Alejandro Sanchez",
@@ -34,6 +36,7 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.16.3",
+    "@vitejs/plugin-react": "^3.1.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.5.0",
     "babel-loader": "^8.2.3",
@@ -55,7 +58,9 @@
     "prettier": "^2.5.1",
     "react-test-renderer": "^17.0.2",
     "remote-origin-url": "^2.0.0",
+    "sass": "^1.61.0",
     "style-loader": "^3.3.1",
+    "vite": "^4.2.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0",
@@ -85,6 +90,7 @@
     "@mui/material": "^5.8.1",
     "@mui/x-data-grid": "^5.12.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "google-map-react": "^2.2.0",
     "prop-types": "^15.6.1",
