--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,10 +9,7 @@ ports:
       onOpen: open-preview
       visibility: public
     - port: 5432
-      onOpen: ignore
-tasks:
-    - init: >
-        (cp -n .env.example .env || true) && 
+      onenv || true) && 
         pipenv install &&
         psql -U gitpod -c 'CREATE DATABASE example;' &&
         psql -U gitpod -c 'CREATE EXTENSION unaccent;' -d example &&
@@ -21,7 +18,10 @@ tasks:
         pipenv run upgrade &&
         python docs/assets/greeting.py back
     - command: >
-        ((sed -i /VITE_BACKEND_URL/d .env && echo "" >> .env && echo "VITE_BACKEND_URL=https://3001-${GITPOD_WORKSPACE_URL:8}" >> .env) || true) && 
+        ((Open: ignore
+tasks:
+    - init: >
+        ((sed -i /BACKEND_URL/d .env && echo "" >> .env && echo "BACKEND_URL=https://3001-${GITPOD_WORKSPACE_URL:8}" >> .env) || true) && 
         npm install &&
         python docs/assets/greeting.py front
       openMode: split-right
