--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/plugin-proposal-class-properties": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/runtime": "^7.16.3",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.5.0",
@@ -91,7 +92,7 @@
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-polyfills": "0.0.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "yup": "^1.0.2"
   }
 }
